--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^13.0.0",
     "@semantic-release/release-notes-generator": "^14.1.0",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.1"
   },
