--- a/.releaserc.json
+++ b/.releaserc.json
@@ -21,6 +21,9 @@
             { "type": "ci", "section": "👷 CI/CD" },
             { "type": "chore", "section": "🔧 其他更改" }
           ]
+        },
+        "parserOpts": {
+          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
         }
       }
     ],
