chore: change preset to conventional commits and fix missing change of refactor

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -41,10 +41,10 @@
       }
     ]
   ],
-  "preset": "angular",
+  "preset": "conventionalcommits",
   "releaseRules": [
     {
-      "type": "refactor",
+      "type": "ref",
       "release": "patch"
     },
     {
